--- a/src/webapp/WEB-INF/pages/users/user.html
+++ b/src/webapp/WEB-INF/pages/users/user.html
@@ -3,13 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Users</title>
+    <title>User</title>
 </head>
 <body>
-<div>
-    <th:block th:each="car : ${cars}">
-        <h1 th:text="${car}"></h1>
-    </th:block>
-</div>
+
 </body>
 </html>
