--- a/src/webapp/WEB-INF/pages/users/index.html
+++ b/src/webapp/WEB-INF/pages/users/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
 
-<!--    <th:block th:each="car : ${cars}">-->
-<!--        <h1 th:text="${car}"></h1>-->
-<!--    </th:block>-->
-<table border="1">
+<table th:border="1">
     <tr>
         <th>id</th>
         <th>name</th>
@@ -19,13 +16,13 @@
         <th>email</th>
     </tr>
     <tr th:each="user : ${users}">
-        <td th:utext="${user.getId()}">id</td>
-        <td th:utext="${user.getName()}">name</td>
-        <td th:utext="${user.getLastName()}">lastName</td>
-        <td th:utext="${user.getAge()}">age</td>
-        <td th:utext="${user.getEmail()}">email</td>
-        <td><a th:href="@{/users/edit/{id}(id=${user.getId()})}">Edit</a>
-            <a th:action="delete" th:object="${user}" th:href="@{/users/{id}(id=${user.getId()})}">Delete</a></td>
+        <td th:utext="${user.id}">id</td>
+        <td th:utext="${user.name}">name</td>
+        <td th:utext="${user.lastName}">lastName</td>
+        <td th:utext="${user.age}">age</td>
+        <td th:utext="${user.email}">email</td>
+        <td><a th:href="@{users/edit/{id}(id=${user.id})}">Edit</a>
+            <a th:href="@{users/delete/{id}(id=${user.id})}">Delete</a></td>
     </tr>
 
 </table>
